# rust-practise

./: .gitignore
assignments/assignment/src/: error_handling  error_handling.rs  even-odd  even-odd.rs  grade-call  grade-call.rs  greeting  greeting.rs  main.rs  num_guess.rs  number_guessing  number_guessing.rs  pos-neg  pos-neg.rs  simple_cal  simple_cal.rs  simpole_interest  simpole_interest.rs  swap  swap.rs  temp-conv  temp-conv.rs  word_length  word_length.rs
assignments/assignment2/src/: main.rs
assignments/assignment3/: topics.txt
assignments/assignment3/src/: main  main.rs
assignments/assignment4/: todo.txt
assignments/assignment4/src/: main.rs
assignments/contract-counter5/: Cargo.toml
assignments/contract-counter5/src/: lib.rs
assignments/counter-contract6/: Cargo.toml
assignments/counter-contract6/src/: lib.rs
assignments/first-contract/: Cargo.toml  workspace.json
assignments/first-contract/src/: lib.rs
assignments/testing/: Cargo.toml
assignments/testing-contract/: Cargo.toml
assignments/testing-contract/src/: lib.rs
assignments/testing/src/: main.rs
random/: slices  slices.rs
random/counter-application-practise/: Cargo.toml
random/counter-application-practise/src/: lib.rs
random/counter-contract4/: Cargo.toml
random/counter-contract4/src/: lib.rs
random/counter-native3/: Cargo.toml
random/counter-native3/src/: lib.rs
random/native-contract1/: Cargo.toml
random/native-contract1/src/: lib.rs
random/native-contract2/: Cargo.toml
random/native-contract2/src/: lib.rs
random/rust-backend/: Cargo.toml
(+30 files in other folders)
